# bili-sync

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  Justfile  Licence  Makefile  README.md  args.html  collection.html  commands.py  configuration.html  constants.py  credential.py  design.html  docker-compose.yml  entry.py  favorite.html  frontend.html  hashmap.json  index.html  introduction.html  main.py  models.py  nfo.py  processor.py  pyproject.toml  question.html  quick-start.html  rust-toolchain.toml  settings.py  sitemap.xml  submission.html  utils.py
.github/workflows/: build-binary.yaml  build-doc.yaml  check.yaml  commit-build.yaml  doc.yaml  docker-image-debug.yml  docker-image.yml  pr-check.yaml  release-build.yaml  release.yaml
assets/: app.2qaO5HJc.js  app.8HRldKOg.js  app.B97fy4VH.js  app.BIPne89B.js  app.Bj0IaD99.js  app.CEL8grOD.js  app.CZ3azS7Q.js  app.CoZwfwex.js  app.D7044GBf.js  app.DKt43iTQ.js  app.DraX4OZW.js  app.Dv4yXwKf.js  app.Dx6bch7w.js  app.Dzy9VQlL.js  app.nyPlpNVf.js  args.md.0LVKgm7q.js  args.md.0LVKgm7q.lean.js  args.md.BYVWDxsV.js  args.md.BYVWDxsV.lean.js  args.md.Bhk3WiUt.js  args.md.Bhk3WiUt.lean.js  args.md.CoVVCgfK.js  args.md.CoVVCgfK.lean.js  args.md.Cpo8PpuR.js  args.md.Cpo8PpuR.lean.js  args.md.DGuAakrj.js  args.md.DGuAakrj.lean.js  args.md.DTah4jvl.js  args.md.DTah4jvl.lean.js  args.md.DXWFIY4g.js  args.md.DXWFIY4g.lean.js  args.md.DZ83BX0m.js  args.md.DZ83BX0m.lean.js  args.md.Ddkiu0-M.js  args.md.Ddkiu0-M.lean.js  args.md.Doc_9Vk9.js  args.md.Doc_9Vk9.lean.js  args.md.DuiqK13C.js  args.md.DuiqK13C.lean.js  args.md.Lb_uRHBg.js  (+243 more)
assets/chunks/: @localSearchIndexroot.B10OC6FO.js  @localSearchIndexroot.BGgrzJ8c.js  @localSearchIndexroot.BGqaV8qX.js  @localSearchIndexroot.BkUvtWnw.js  @localSearchIndexroot.BltSwwRe.js  @localSearchIndexroot.C1Kwf251.js  @localSearchIndexroot.C4V5Z7xN.js  @localSearchIndexroot.CEmZ6jsf.js  @localSearchIndexroot.CGinNUrJ.js  @localSearchIndexroot.CwD5psav.js  @localSearchIndexroot.DN_5JVUZ.js  @localSearchIndexroot.Dr1ajbVp.js  @localSearchIndexroot.S7YtDd3Q.js  @localSearchIndexroot.eb_qTtDW.js  @localSearchIndexroot.fh-6HH_i.js  VPLocalSearchBox.BZie8BUK.js  VPLocalSearchBox.BdIL1DHn.js  VPLocalSearchBox.CAVYvejV.js  VPLocalSearchBox.CjPUOSiQ.js  VPLocalSearchBox.DSvNZpVZ.js  VPLocalSearchBox.DWh8AFlg.js  VPLocalSearchBox.DXuasH9U.js  VPLocalSearchBox.DaDwHtls.js  VPLocalSearchBox.DfumD8WA.js  VPLocalSearchBox.Dg5c8yAD.js  VPLocalSearchBox.LVLHzu5D.js  VPLocalSearchBox.MMRInt6M.js  VPLocalSearchBox.YW6Nriap.js  VPLocalSearchBox.cPhmMpFo.js  VPLocalSearchBox.ticaioZI.js  framework.Bsyxd66g.js  (+30 more)
crates/bili_sync/: Cargo.toml  build.rs
crates/bili_sync/src/: config.rs  database.rs  downloader.rs  error.rs  initialization.rs  main.rs  workflow.rs  workflow_danmaku.rs
crates/bili_sync/src/adapter/: bangumi.rs  collection.rs  convert.rs  favorite.rs  mod.rs  submission.rs  watch_later.rs
crates/bili_sync/src/adapter/helper/: mod.rs
crates/bili_sync/src/api/: api_doc.rs  auth.rs  error.rs  handler.rs  helper.rs  mod.rs  payload.rs  request.rs  response.rs  wrapper.rs
crates/bili_sync/src/api/handlers/: mod.rs  source_collections_handler.rs  source_favorites_handler.rs  source_submissions_handler.rs  source_watch_later_handler.rs  video_handler.rs
crates/bili_sync/src/api/routes/: mod.rs
crates/bili_sync/src/api/routes/config/: mod.rs
crates/bili_sync/src/api/routes/dashboard/: mod.rs
crates/bili_sync/src/api/routes/login/: mod.rs
crates/bili_sync/src/api/routes/logs/: mod.rs  mpsc.rs
crates/bili_sync/src/api/routes/me/: mod.rs
crates/bili_sync/src/api/routes/sse/: mod.rs
crates/bili_sync/src/api/routes/task/: mod.rs
crates/bili_sync/src/api/routes/video_sources/: mod.rs
crates/bili_sync/src/api/routes/videos/: mod.rs
crates/bili_sync/src/api/routes/ws/: log_helper.rs  mod.rs
crates/bili_sync/src/api/routes/youtube/: mod.rs
crates/bili_sync/src/bilibili/: analyzer.rs  bangumi.rs  client.rs  collection.rs  credential.rs  dns.rs  dynamic.rs  error.rs  favorite_list.rs  login.rs  me.rs  mod.rs  submission.rs  subtitle.rs  video.rs  watch_later.rs
crates/bili_sync/src/bilibili/danmaku/: ass_writer.rs  danmu.rs  mod.rs  model.rs  writer.rs
crates/bili_sync/src/bilibili/danmaku/canvas/: lane.rs  mod.rs
crates/bili_sync/src/config/: args.rs  clap.rs  current.rs  default.rs  flag.rs  global.rs  handlebar.rs  item.rs  legacy.rs  mod.rs  versioned_cache.rs  versioned_config.rs
crates/bili_sync/src/core/: command.rs  utils.rs
crates/bili_sync/src/model/: collection.rs  favorite.rs  mod.rs
crates/bili_sync/src/notifier/: info.rs  message.rs  mod.rs
crates/bili_sync/src/task/: http_server.rs  manual_video.rs  mod.rs  video_downloader.rs
crates/bili_sync/src/utils/: command.rs  convert.rs  danmaku_schedule.rs  download_context.rs  download_stats.rs  filenamify.rs  format_arg.rs  mod.rs  model.rs  nfo.rs  notify.rs  rule.rs  signal.rs  status.rs  status_query.rs  task_notifier.rs  utils.rs  validation.rs
crates/bili_sync/src/youtube/: helper.rs  mod.rs  rss.rs
crates/bili_sync/src/youtube/python/: bridge.py  core.py
crates/bili_sync_entity/: Cargo.toml
crates/bili_sync_entity/src/: lib.rs
crates/bili_sync_entity/src/custom_type/: mod.rs  rule.rs  string_vec.rs  upper_vec.rs
crates/bili_sync_entity/src/entities/: collection.rs  config.rs  favorite.rs  mod.rs  page.rs  prelude.rs  source_collection.rs  source_favorite.rs  source_submission.rs  source_watch_later.rs  submission.rs  video.rs  video_source.rs  watch_later.rs  youtube_channel.rs  youtube_video.rs
docs/: args.md  bun.lockb  collection.md  configuration.md  design.md  favorite.md  frontend.md  index.md  introduction.md  package.json  question.md  quick-start.md  submission.md
entity/: Cargo.toml
migration/: Cargo.toml
scripts/: 2.0.3_add_fanart.py  build_local.sh
src/: bilibili.rs  command.rs  config.rs  database.rs  downloader.rs  error.rs  lib.rs  main.rs
web/: .prettierrc  components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+249 files in other folders)
