[workspace]
members = ["crates/*"]
default-members = ["crates/bili_sync"]
resolver = "2"

[workspace.package]
version = "2.10.2"
authors = ["amtoaer <amtoaer@gmail.com>"]
license = "MIT"
description = "由 Rust & Tokio 驱动的哔哩哔哩同步工具"
edition = "2024"
publish = false

[workspace.dependencies]
bili_sync_entity = { path = "crates/bili_sync_entity" }
bili_sync_migration = { path = "crates/bili_sync_migration" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
arc-swap = { version = "1.8.0", features = ["serde"] }
async-stream = "0.3.6"
async-tempfile = { version = "0.7.0", features = ["uuid"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws"] }
base64 = "0.22.1"
built = { version = "0.7.7", features = ["git2", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["env", "string"] }
cookie = "0.18.1"
croner = "3.0.1"
dashmap = "6.1.0"
derivative = "2.2.0"
dirs = "6.0.0"
enum_dispatch = "0.3.13"
float-ord = "0.3.2"
futures = "0.3.31"
git2 = { version = "0.20.3", features = [], default-features = false }
handlebars = "6.4.0"
hex = "0.4.3"
itertools = "0.14.0"
leaky-bucket = "1.1.2"
md5 = "0.8.0"
memchr = "2.7.6"
once_cell = "1.21.3"
parking_lot = "0.12.5"
prost = "0.14.1"
quick-xml = { version = "0.38.4", features = ["async-tokio"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = [
    "query",
    "form",
    "charset",
    "cookies",
    "gzip",
    "http2",
    "json",
    "rustls-no-provider",
    "stream",
], default-features = false }
rsa = { version = "0.10.0-rc.9", features = ["sha2"] }
rust-embed-for-web = { git = "https://github.com/amtoaer/rust-embed-for-web", tag = "v1.0.0" }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
sea-orm = { version = "1.1.19", features = [
    "macros",
    "runtime-tokio",
    "sqlx-sqlite",
    "sqlite-use-returning-for-3_35",
] }
sea-orm-migration = { version = "1.1.19", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
toml = "0.9.10"
tower = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "json"] }
ua_generator = { version = "0.5.42", default-features = false }
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[workspace.metadata.release]
release = false
tag-message = ""
tag-prefix = ""
pre-release-commit-message = "chore: 发布 bili-sync {{version}}"
publish = false
pre-release-replacements = [
    { file = "../../docs/.vitepress/config.mts", search = "\"v[0-9\\.]+\"", replace = "\"v{{version}}\"", exactly = 1 },
    { file = "../../docs/introduction.md", search = " v[0-9\\.]+，", replace = " v{{version}}，", exactly = 1 },
    { file = "../../web/package.json", search = "\"version\": \"[0-9\\.]+\"", replace = "\"version\": \"{{version}}\"", exactly = 1 },
]

[profile.dev.package."*"]
debug = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
