[workspace]
members = ["crates/*"]
default-members = ["crates/bili_sync"]
resolver = "2"

[workspace.package]
version = "2.11.1"
authors = ["amtoaer <amtoaer@gmail.com>"]
license = "MIT"
description = "由 Rust & Tokio 驱动的哔哩哔哩同步工具"
edition = "2024"
publish = false

[workspace.dependencies]
bili_sync_entity = { path = "crates/bili_sync_entity" }
bili_sync_migration = { path = "crates/bili_sync_migration" }

anyhow = { version = "1.0.102", features = ["backtrace"] }
arc-swap = { version = "1.9.1", features = ["serde"] }
async-stream = "0.3.6"
async-tempfile = { version = "0.8.0", features = ["uuid"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros", "ws"] }
base64 = "0.22.1"
built = { version = "0.8.1", features = ["git2", "chrono"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["env", "string"] }
cookie = "0.18.1"
croner = "3.0.1"
dashmap = "6.2.1"
derivative = "2.2.0"
dirs = "6.0.0"
dunce = "1.0.5"
either = "1.16.0"
enum_dispatch = "0.3.13"
float-ord = "0.3.2"
futures = "0.3.32"
git2 = { version = "0.21.0", features = [], default-features = false }
handlebars = "6.4.1"
hex = "0.4.3"
itertools = "0.14.0"
leaky-bucket = "1.1.2"
md5 = "0.8.0"
memchr = "2.8.1"
once_cell = "1.21.4"
parking_lot = "0.12.5"
prost = "0.14.4"
quick-xml = { version = "0.40.1", features = ["async-tokio"] }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = [
    "query",
    "form",
    "charset",
    "cookies",
    "gzip",
    "http2",
    "json",
    "rustls-no-provider",
    "stream",
], default-features = false }
rsa = { version = "0.10.0-rc.18", features = ["sha2"] }
rust-embed-for-web = { git = "https://github.com/amtoaer/rust-embed-for-web", tag = "v1.0.0" }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
sea-orm = { version = "1.1.20", features = [
    "macros",
    "runtime-tokio",
    "sqlx-sqlite",
    "sqlite-use-returning-for-3_35",
] }
sea-orm-migration = { version = "1.1.20", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
strum = { version = "0.28.0", features = ["derive"] }
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
toml = "1.1.2"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "json"] }
ua_generator = { version = "0.5.65", default-features = false }
uuid = { version = "1.23.2", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[workspace.metadata.release]
release = false
tag-message = ""
tag-prefix = ""
pre-release-commit-message = "chore: 发布 bili-sync {{version}}"
publish = false
pre-release-replacements = [
    { file = "../../docs/.vitepress/config.mts", search = "\"v[0-9\\.]+\"", replace = "\"v{{version}}\"", exactly = 1 },
    { file = "../../docs/introduction.md", search = " v[0-9\\.]+，", replace = " v{{version}}，", exactly = 1 },
    { file = "../../web/package.json", search = "\"version\": \"[0-9\\.]+\"", replace = "\"version\": \"{{version}}\"", exactly = 1 },
]

[profile.dev.package."*"]
debug = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
